#48 Fix: 수정 - switch wrapper align items 수정

--- a/front/src/components/filter/filter.module.scss
+++ b/front/src/components/filter/filter.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   flex-direction: column;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
   transform: translateY(-0.95rem);
   transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
 
